   Version 0.71
   Version 0.70
   Version 0.69
   Version 0.68
   Version 0.67
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.73
 ============

 Released on 

 Total files count: 
 Total lines count: 
 maintainer/run-distcheck.sh: 

 New features and improvements:

   - 

 Bug fixes:

   - 

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.72
 ============

 Released on 2017-10-23

 Total files count:    853 files
 Total lines count: 579358 lines
 maintainer/run-distcheck.sh: real	3m6.206s

 New features and improvements:

   - Rate: check validity and document orphans (todo #1454).
   - Recurrent: more comprehensive label when recording waiting operations (todo #1478).
   - Recurrent: automatically go to waiting recurrent operations after each generation (todo #1475).
   - Unreconciliated/Unsettled entries: center the status indicator.
   - Unreconciliated/Unsettled entries: have a button per action (todo #1484).
   - VAT: record current date when the user validates a declaration.
   - VAT: complete the ofaTVARecordStore with missing datas (todo #1480).

 Bug fixes:

   - AccountProperties: don't try to get expander status for root accounts.
   - DBMS upgrade: fix account archive remediation (todo #1482).
   - DBMS upgrade: better manage the possible errors (todo #1483).
   - ofaEntryPage: better handle a reconciliation group deletion (todo #1479).
   - ofaMainWindow: activates already existing pages on demand (todo #1476).
   - ofaMainWindow: disable guided input per ledger on read-only dossier (todo #1487).
   - TVARecordProperties: fix memory leak.
   - Unreconciliated entries: take the view up to date.
   - Unsettled entries: take the view up to date (todo #1481).

 Other changes:

   - DGIFEC: new plugin which handles the FEC export (todo #1410).
   - ofaIConcil: get rid of instance data (todo #1486).