@@ -34,7 +34,8 @@
 
  Other changes:
 
-   - 
+   - my_utils_str_from_uint_list(): new function.
+   - my_utils_str_to_uint_list(): new function.
 
 -----------------------------------------------------------------------
  Version 0.72
